fixed navbar highlight on small window

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -88,7 +88,7 @@
   .app-nav a {
     display: block;
     text-align: center;
-    padding: 5px 5px;
+    padding: 18px 5px;
     text-decoration: none;
     font-size-adjust: inherit;
   }
